tomato64/package/www/www/tomato.css
/* ... */
ul.tabs,
#tabs {
	padding: 0;
	margin: 0;
}

ul.tabs li,
#tabs li {
	display: inline;
	list-style: none;
}

ul.tabs a,
#tabs a {
	min-width: 90px;
	width: unset;
	height: auto;
	display: block;
	float: left;
	padding: 4px;
	margin: 3px 3px 0 0;
	font-size: 12px;
	text-align: center;
	text-decoration: none;
	color: #888;
	background: #f3f3f3;
}

ul.tabs a.active,
#tabs a.active {
	background: #af4141;
	color: #fff;
	font-weight: bold;
}

ul.tabs a:hover,
#tabs a:hover {
	background: #bf6060;
	color: #fff;
}

#tabs-bottom {
	clear: both;
	padding: 0;
}

.tabs-bottom {
	clear: both;
	border-top: 12px solid;
	opacity: 0;
	padding: 0;
}

.error {
	background: #ffffd0;
}

.error-focused {
	border: 1px dashed #f77;
}

.section {
	padding: 0 0 20px 0;
}

.section ul {
	margin-left: 0px;
	padding-left: 15px;
}

.section-title {
	font-size: 14px;
	color: #444;
	margin: 0 0 10px 0;
	padding-bottom: 4px;
	border-bottom: 1px solid #f0f0f0;
}

table.fields {
	margin: 0;
	width: 100%
}

.fields td {
	padding: 2px 0;
}

.fields td.title.indent1 {
	width: 160px;
	padding: 1px 15px 1px 0px;
}

.fields td.title.indent2 {
	padding: 1px 5px 1px 14px;
}

.fields td.title.indent3 {
	padding: 1px 5px 1px 21px;
}

.fields td.title.indent4 {
	padding: 1px 5px 1px 28px;
}

.fields .spacer {
	height: 8px;
}

.fields td.content {
	width: 585px;
	vertical-align: top;
}

.tomato-grid {
	padding: 0;
	margin: 0 0 3px 0;
	border-spacing: 1px;
	border-collapse: separate;
	border: 1px solid #e0e0e0;
	background: #fff;
	width: 100%;
}

.tomato-grid td {
	padding: 2px;
	margin: 0px;
	font: 12px sans-serif;
}

.tomato-grid .header {
	background: #e7e7e7;
	cursor: pointer;
}

.tomato-grid .header td,
#bwm-grid .header td {
	font: 11px sans-serif;
	font-weight: bold;
}

.tomato-grid .footer {
	background: #f0f0f0;
}

.tomato-grid .odd {
	background: #f7f7f7;
	cursor: pointer;
}

.tomato-grid .even {
	background: #fff;
	cursor: pointer;
}

.tomato-grid .disabled {
	color: #999;
}

.tomato-grid .odd:hover,
.tomato-grid .even:hover {
	background: #f7e0e0;
}

.tomato-grid input {
	margin: 0;
	padding: 0;
}

.tomato-grid .edit {
	padding: 0;
	margin: 0;
}

.tomato-grid .editor {
	background: #f0f0f0;
}

.tomato-grid .controls {
	background: #f0f0f0;
	text-align: right;
}

.tomato-grid .sortasc:after {
	font-size: 90%;
	float: right;
	content: " \25B2";
}

.tomato-grid .sortdes:after {
	font-size: 90%;
	float: right;
	content: " \25BC";
}

.tomato-grid a {
	color: #407050;
}

.tomato-grid a:hover {
	color: #fff;
}

.tomato-grid input,
.tomato-grid select {
	width: 98%;
}

.tomato-grid .controls input {
	font: 11px sans-serif;
	width: 60px;
}

#tg-row-panel {
	position: absolute;
	margin: 0;
	padding: 0;
}

#tg-row-panel img {
	cursor: pointer;
	opacity: 0.6;
	margin: 0;
	padding: 0;
	background: #fff;
	border: 1px solid #fff;
}

#tg-row-panel img:hover {
	opacity: 1;
	border: 1px solid #eee;
}

div#vlan-grid img[id^="eth_"] {
	width: 55%;
	height: 55%;
}

div[id^="vport_"],
div[id^="media_"] {
	margin: 0 auto;
}

#expire-button {
	margin: 15px 0 5px 0;
}

#res-add-button {
	float: right;
	width: 60px;
}

#refresh-time,
#expire-time {
	width: 120px;
}

img[id^="spin"],
img[id^="spin2"],
#spin,
#refresh-spinner {
	display: none;
	vertical-align: middle;
	margin: 0 4px 0 4px;
}

img[id^="eth_"] {
	width: 46px;
	height: 35px;
}

#wait {
	display: none;
	text-align: right;
	padding: 0 5px 0 5px;
}

#generateWait {
	padding-left: 5px;
}

.bwmg {
	padding: 0;
	margin: 0 0 3px 0;
	border-spacing: 1px;
	border-collapse: separate;
	border: 1px solid #e0e0e0;
	background: #fff;
	width: 500px;
}

.bwmg td {
	padding: 2px;
	margin: 0px;
	font: 12px sans-serif;
}

.bwmg .header {
	background: #e7e7e7;
}

.bwmg .header td {
	font: 11px sans-serif;
	font-weight: bold;
}

.bwmg .footer {
	background: #f0f0f0;
}

.bwmg .odd {
	background: #f7f7f7;
}

.bwmg .even {
	background: #fff;
}

.bwmg .dl,
.bwmg .ul,
.bwmg .total {
	width: 25%;
	text-align: right;
}

#bwm-controls {
	text-align: right;
	margin-right: 5px;
	margin-top: 5px;
	float: right;
	opacity: 0;
}

#bwm-controls .selected,
#logging .selected {
	padding: 0;
	font-weight: bold;
	text-decoration: underline;
}

#bwm-stats {
	border-spacing: 5px;
	border-collapse: collapse;
	width: auto;
	margin-bottom: 20px;
	margin-top: 7px;
}

#bwm-stats td {
	width: auto;
	padding: 5px;
	height: 2em;
	text-align: right;
	vertical-align: top;
}

#bwm-stats td:nth-child(2n) {
	padding-right: 10px;
}

#bwm-last {
	width: 150px;
	margin-bottom: 30px;
}

#rstats #bwm-grid {
	float: left;
}

.bwm-count,
.qos-count,
.bwm-pct,
.qos-pct,
#bwm-grid .co3,
#bwm-grid .co4,
#bwm-grid .co5,
#bwm-grid2 .co2,
#bwm-grid2 .co3,
#bwm-grid2 .co4,
#bwm-grid2 .co5,
#bwm-grid2 .co6,
#bwm-grid2 .co7,
#bwm-grid2 .co8,
#survey-grid .co4,
#qosctrate-grid .co6,
#qosctrate-grid .co7,
#dev-grid .co9 {
	text-align: right;
}

#qosctrate-grid .co1 {
	width: 30px;
}

#qosctrate-grid .co2,
#qosctrate-grid .co4 {
	width: 320px;
}

#qosctrate-grid .co3,
#qosctrate-grid .co5 {
	width: 50px;
}

#qosctrate-grid .co6,
#qosctrate-grid .co7 {
	width: 30px;
}

#bwm-ctrl,
#pptp-ctrl,
#webmon-controls,
.webmon-clear,
.log-clear {
	float: right;
	text-align: right;
}

.bwm-svg,
.qos-svg {
	border: none;
	width: 100%;
}

.bwm-thead,
.qos-thead {
	font-size: 90%;
	font-weight: bold;
}

.bwm-color,
.qos-color {
	min-width: 10px;
	width: 10px;
	height: 25px;
}

.bwm-pct,
.qos-pct {
	width: 75px;
}

.bwm-total,
.qos-total {
	border-top: 1px dashed #bbb;
	font-weight: bold;
}

#trace-error {
	padding: 0.2em 1em 0.2em 1em;
	background: #fec;
}

div#graph {
	border: none;
	border-top: 1px solid #f0f0f0;
	border-bottom: 1px solid #f0f0f0;
	margin: 0;
	padding: 0;
	text-align: center;
	opacity: 0;
}

embed[type="image/svg+xml"] {
	margin: 0;
	padding: 0;
}

.note-spacer,
.iperf_status_table,
.afu-info-table {
	padding-top: 10px;
}

.vpn-status-btn {
	display: inline;
}

p.vpn-keyhelp {
	font-size: smaller;
}
/* ... */

